--- a/repeater-console/repeater-console-start/src/main/resources/velocity/layout/default.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/layout/default.vm
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/favorite.ico" type="image/x-icon"/>
     <link rel=”icon” href="/favorite.ico" type="image/x-icon"/>
     <link rel="bookmark" href="/favorite.ico" type="image/x-icon"/>
-    <title>在线流量 - Repeater</title>
+    <title>在线流量 </title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
