--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/blocks/start-replay.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/blocks/start-replay.vm
@@ -13,27 +13,30 @@
                             <div class="form-group" id="machine-select-group" style="display: none">
                                 <label for="scenario-name" class="col-md-3 control-label">机器</label>
                                 <div class="col-md-8">
-                                    <select type="text" class="form-control" name="ip" id="machine-select" autocomplete="off" style="width: 300px">
+                                    <select type="text" class="form-control" name="moduleId" id="machine-select"
+                                            autocomplete="off" style="width: 300px">
                                     </select>
                                 </div>
                             </div>
                             <div class="form-group" id="machine-help" style="display: none">
-                                <label for="scenario-name" class="col-md-3 control-label" style="width: 100px">机器</label>
+                                <label for="scenario-name" class="col-md-3 control-label"
+                                       style="width: 100px">机器</label>
                                 <div class="col-md-8">
                                     <label class="control-label" style="width: 300px">没有可回放的机器</label>
                                 </div>
                             </div>
                             <div class="form-group" style="margin-top:10px">
-                                <label for="scenario-name" class="col-md-3 control-label" style="width: 100px">MOCK</label>
+                                <label for="scenario-name" class="col-md-3 control-label"
+                                       style="width: 100px">MOCK</label>
                                 <div class="col-md-8">
                                     <div style="width: 280px">
                                         <input class="form-control" type="radio" name="mock" value="true" checked> 开
-                                        <input class="form-control" type="radio" name="mock" value="false" > 关
+                                        <input class="form-control" type="radio" name="mock" value="false"> 关
                                     </div>
                                 </div>
                             </div>
-                            <input type="hidden" name="traceId" id="replay-traceId" />
-                            <input type="hidden" name="appName" id="replay-appName" />
+                            <input type="hidden" name="traceId" id="replay-traceId"/>
+                            <input type="hidden" name="appName" id="replay-appName"/>
                         </form>
                     </div>
                 </div>
