--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/config/add.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/config/add.vm
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/favorite.ico" type="image/x-icon"/>
     <link rel=”icon” href="/favorite.ico" type="image/x-icon"/>
     <link rel="bookmark" href="/favorite.ico" type="image/x-icon"/>
-    <title>新增配置 - Repeater</title>
+    <title>新增配置 </title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,79 +24,6 @@
 <body class="hold-transition sidebar-mini ">
 <!-- Site wrapper -->
 <div class="wrapper">
-    <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-dark">
-        <!-- Left navbar links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-            </li>
-        </ul>
-
-        <!-- Right navbar links -->
-        <ul class="navbar-nav ml-auto">
-        </ul>
-    </nav>
-    <!-- /.navbar -->
-
-    <!-- Main Sidebar Container -->
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <!-- Brand Logo -->
-        <a href="#" class="brand-link">
-            <img src="/dist/img/RepeaterLogo.ico"
-                 alt="AdminLTE Logo"
-                 class="brand-image img-circle elevation-3"
-                 style="opacity: .8">
-            <span class="brand-text font-weight-light">华夏星斗流量录制回放平台</span>
-        </a>
-
-        <!-- Sidebar -->
-        <div class="sidebar">
-            <!-- Sidebar Menu -->
-            <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                    <!-- Add icons to the links using the .nav-icon class
-                         with font-awesome or any other icon font library -->
-                    <li class="nav-item">
-                        <a href="/online/search.htm"  target="_self" class="nav-link">
-                            <i class="nav-icon fa fa-database"></i>
-                            <p>
-                                在线流量
-                                <span class="right badge badge-success">New</span>
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/replay/list.htm"  target="_self" class="nav-link">
-                            <i class="nav-icon fa fa-heartbeat"></i>
-                            <p>
-                                回放记录
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#"  target="_self"  class="nav-link active">
-                            <i class="nav-icon fa fa-cogs"></i>
-                            <p>
-                                配置管理
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/module/list.htm"  target="_self"  class="nav-link">
-                            <i class="nav-icon fa fa-heartbeat"></i>
-                            <p>
-                                在线模块
-                            </p>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <!-- /.sidebar-menu -->
-        </div>
-        <!-- /.sidebar -->
-    </aside>
-
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
@@ -115,7 +42,6 @@
                 </div>
             </div><!-- /.container-fluid -->
         </section>
-
         <!-- Main content -->
         <section class="content">
             <div class="row">
@@ -127,7 +53,7 @@
                             </h5>
                             <div class="card-tools">
                                 <button class="btn btn-primary btn-sm float-right"
-                                        data-loading-text="searching" id="add-config-btn" >
+                                        data-loading-text="searching" id="add-config-btn">
                                     保存
                                 </button>
                             </div>
@@ -138,13 +64,15 @@
                                     <form class="form-inline" method="get">
                                         <div class="form-group" style="margin-left:10px">
                                             <label for="appName">应用名:</label>
-                                            <input type="text" class="form-control" placeholder="appName" id="appName" name="appName" autocomplete="off"
+                                            <input type="text" class="form-control" placeholder="appName" id="appName"
+                                                   name="appName" autocomplete="off"
                                                    data-toggle="tooltip"
                                                    title="appName" style="width: 210px;margin-left:10px">
                                         </div>
                                         <div class="form-group" style="margin-left: 10px">
                                             <label for="TraceId">环境:</label>
-                                            <input type="text" class="form-control" placeholder="environment" id="environment" name="environment" autocomplete="off"
+                                            <input type="text" class="form-control" placeholder="environment"
+                                                   id="environment" name="environment" autocomplete="off"
                                                    data-toggle="tooltip"
                                                    title="environment" style="width: 210px;margin-left:10px">
                                         </div>
@@ -152,18 +80,18 @@
                                 </div>
                             </div>
                             <div class="row">
-                                    <div class="col-md-8">
+                                <div class="col-md-8">
                                         <span STYLE="margin-left: -6px" class="badge badge-success">配置信息<i
                                                 class="fa fa-code"></i></span>
-                                    </div>
-                                    <div class="col-md-4">
+                                </div>
+                                <div class="col-md-4">
                                         <span class="badge badge-success" style="margin-left: -6px">配置帮助<i
                                                 class="fa fa-code"></i></span>
-                                    </div>
-                                    <div class="col-md-8" id="config-editor"
-                                         style="height: 500px">$!config</div>
-                                    <div class="col-md-4" id="help-editor"
-                                         style="height: 500px">$!configHelp</div>
+                                </div>
+                                <div class="col-md-8" id="config-editor"
+                                     style="height: 500px">$!config</div>
+                                <div class="col-md-4" id="help-editor"
+                                     style="height: 500px">$!configHelp</div>
                             </div>
                         </div>
                     </div>
@@ -173,20 +101,6 @@
         <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
-
-    <footer class="main-footer">
-        <div class="float-right d-none d-sm-block">
-            <b>Version</b> 1.0.0
-        </div>
-        <strong>Copyright &copy; 2023-2024 <a href="#">华夏人寿保险股份有限公司</a>.</strong> All rights
-        reserved.
-    </footer>
-
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-        <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
 </div>
 <!-- ./wrapper -->
 
@@ -240,7 +154,7 @@
                 },
                 success: function (res) {
                     hideLoading(10)
-                    window.location.href = "//" + host + "/config/detail.htm?appName=" + appName +"&environment="+environment;
+                    window.location.href = "//" + host + "/config/detail.htm?appName=" + appName + "&environment=" + environment;
                 },
                 dataType: 'json',
                 error: function (XMLHttpRequest) {
