--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/error/404.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/error/404.vm
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/favorite.ico" type="image/x-icon"/>
     <link rel=”icon” href="/favorite.ico" type="image/x-icon"/>
     <link rel="bookmark" href="/favorite.ico" type="image/x-icon"/>
-    <title>错误页面 - Repeater</title>
+    <title>错误页面 </title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
