--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/index.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/index.vm
@@ -6,10 +6,9 @@
     <link rel="shortcut icon" href="/favorite.ico" type="image/x-icon"/>
     <link rel=”icon” href="/favorite.ico" type="image/x-icon"/>
     <link rel="bookmark" href="/favorite.ico" type="image/x-icon"/>
-    <title>首页 - Repeater</title>
+    <title>首页 </title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Font Awesome -->
     <link rel="stylesheet" href="/plugins/fontawesome-free/css/all.min.css">
     <!-- Ionicons -->
@@ -23,14 +22,13 @@
 <!-- Site wrapper -->
 <div class="wrapper">
     <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-dark">
+    <nav style="border: 0px;" class="main-header navbar navbar-expand navbar-dark">
         <!-- Left navbar links -->
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+                <a class="nav-link" data-widget="" href="#"></a>
             </li>
         </ul>
-
         <!-- Right navbar links -->
         <ul class="navbar-nav ml-auto">
         </ul>
@@ -47,7 +45,6 @@
                  style="opacity: .8">
             <span class="brand-text font-weight-light">华夏星斗流量录制回放平台</span>
         </a>
-
         <!-- Sidebar -->
         <div class="sidebar">
             <!-- Sidebar Menu -->
@@ -57,16 +54,23 @@
                     <!-- Add icons to the links using the .nav-icon class
                          with font-awesome or any other icon font library -->
                     <li class="nav-item">
-                        <a href="/online/search.htm" class="nav-link">
+                        <a href="/home.htm" target="three" class="nav-link active">
                             <i class="nav-icon fa fa-database"></i>
                             <p>
-                                在线流量
-                                <span class="right badge badge-success">New</span>
+                                首页
                             </p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/replay/list.htm" class="nav-link">
+                        <a href="/online/list.htm" target="three" class="nav-link">
+                            <i class="nav-icon fa fa-database"></i>
+                            <p>
+                                在线流量
+                            </p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/replay/list.htm" target="three" class="nav-link">
                             <i class="nav-icon fa fa-heartbeat"></i>
                             <p>
                                 回放记录
@@ -74,7 +78,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/config/list.htm" target="_self" class="nav-link">
+                        <a href="/config/list.htm" target="three" class="nav-link">
                             <i class="nav-icon fa fa-cogs"></i>
                             <p>
                                 配置管理
@@ -82,7 +86,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/module/list.htm" target="_self" class="nav-link">
+                        <a href="/module/list.htm" target="three" class="nav-link">
                             <i class="nav-icon fa fa-heartbeat"></i>
                             <p>
                                 在线模块
@@ -97,11 +101,9 @@
     </aside>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
-        <div id="container" style="padding: 15% 0 0 25%;"></div>
-        <!-- /.content -->
-    </div>
+    <iframe name="three" width="100%" style="border: 0px;padding: 0px;margin: 0px;display:block;" src="/home.htm"
+            seamless
+            class="content-wrapper"></iframe>
     <!-- /.content-wrapper -->
 
     <footer class="main-footer">
@@ -114,10 +116,13 @@
 
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
-
+        <!-- Control sidebar content goes here -->
     </aside>
     <!-- /.control-sidebar -->
 </div>
+<!-- ./wrapper -->
+
+<!-- jQuery -->
 <script src="/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -125,16 +130,86 @@
 <script src="/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="/dist/js/demo.js"></script>
-<script src="/dist/js/g2.min.js"></script>
-<script src="/dist/js/index.js"></script>
-<script>
+    #parse("blocks/fakeloader.vm")
+    #parse("blocks/install-module.vm")
+<script src="/app/js/app.js" charset="UTF-8"></script>
+<script type="application/javascript">
     jQuery(function ($) {
-        var data = load();
-        var char = renderBarChart(data);
-        setInterval(function () {
-            updateBarChart(char, load())
-        }, 1000);
-    })
+        $(".btn-active").on('click', function () {
+            var appName = $(this).attr('data-app');
+            var ip = $(this).attr('data-ip');
+            innerPost("/module/active.json", {'appName': appName, 'ip': ip}, function (response) {
+                if (response.success) {
+                    notice(response.message, response.success)
+                    setTimeout('window.location.reload()', 1000)
+                } else {
+                    notice(response.message, response.success)
+                }
+            });
+        })
+        $(".btn-frozen").on('click', function () {
+            var appName = $(this).attr('data-app');
+            var ip = $(this).attr('data-ip');
+            innerPost("/module/frozen.json", {'appName': appName, 'ip': ip}, function (response) {
+                if (response.success) {
+                    notice(response.message, response.success)
+                    setTimeout('window.location.reload()', 1000)
+                } else {
+                    notice(response.message, response.success)
+                }
+            });
+        })
+        $(".btn-reload").on('click', function () {
+            var appName = $(this).attr('data-app');
+            var ip = $(this).attr('data-ip');
+            innerPost("/module/reload.json", {'appName': appName, 'ip': ip}, function (response) {
+                if (response.success) {
+                    notice(response.message, response.success)
+                    setTimeout('window.location.reload()', 1000)
+                } else {
+                    notice(response.message, response.success)
+                }
+            });
+        })
+
+        $("#btn-install").on("click", function () {
+            var modal = $('#start-install-modal');
+            modal.on('shown.bs.modal', function () {
+                $(this).css('display', 'block');
+                var modalHeight = $(window).height() / 2 - $('#start-install-modal .modal-dialog').height() / 2;
+                $(this).find('.modal-dialog').css({
+                    'margin-top': modalHeight
+                });
+            });
+            modal.modal('show')
+        })
+
+        $("#start-install-btn").on('click', function () {
+            showLoading(10);
+            $("#startInstallForm").ajaxSubmit({
+                type: "post",
+                url: "//" + host + "/module/install.json",
+                success: function (data) {
+                    $("#start-install-modal").modal('hide')
+                    hideLoading(10)
+                    if (data.success) {
+                        notice(data.message, data.success)
+                        setTimeout('window.location.reload()', 1000)
+                    } else {
+                        notice(data.message, data.success)
+                    }
+                },
+                error: function (XMLHttpRequest) {
+                    hideLoading(10);
+                    notice("服务抽风了，网络异常 " + XMLHttpRequest.responseText, false);
+                }
+            })
+        });
+        $(".nav-link").on('click', function () {
+            $(".nav-link").removeClass('active');
+            $(this).addClass('active');
+        })
+    });
 </script>
 </body>
 </html>
