--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/module/list.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/module/list.vm
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/favorite.ico" type="image/x-icon"/>
     <link rel=”icon” href="/favorite.ico" type="image/x-icon"/>
     <link rel="bookmark" href="/favorite.ico" type="image/x-icon"/>
-    <title>在线模块 - Repeater</title>
+    <title>在线模块 </title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -17,84 +17,19 @@
     <link rel="stylesheet" href="/dist/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="/dist/css/fonts/googlefonts.css" rel="stylesheet">
+    <style>
+        .form-inline .form-control {
+            width: calc(100% - 8em);
+        }
+
+        .form-inline .form-label {
+            width: 8em;
+        }
+    </style>
 </head>
 <body class="hold-transition sidebar-mini ">
 <!-- Site wrapper -->
 <div class="wrapper">
-    <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-dark">
-        <!-- Left navbar links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-            </li>
-        </ul>
-
-        <!-- Right navbar links -->
-        <ul class="navbar-nav ml-auto">
-        </ul>
-    </nav>
-    <!-- /.navbar -->
-
-    <!-- Main Sidebar Container -->
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <!-- Brand Logo -->
-        <a href="#" class="brand-link">
-            <img src="/dist/img/RepeaterLogo.ico"
-                 alt="AdminLTE Logo"
-                 class="brand-image img-circle elevation-3"
-                 style="opacity: .8">
-            <span class="brand-text font-weight-light">华夏星斗流量录制回放平台</span>
-        </a>
-
-        <!-- Sidebar -->
-        <div class="sidebar">
-            <!-- Sidebar Menu -->
-            <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
-                    data-accordion="false">
-                    <!-- Add icons to the links using the .nav-icon class
-                         with font-awesome or any other icon font library -->
-                    <li class="nav-item">
-                        <a href="/online/search.htm" target="_self" class="nav-link">
-                            <i class="nav-icon fa fa-database"></i>
-                            <p>
-                                在线流量
-                                <span class="right badge badge-success">New</span>
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/replay/list.htm" target="_self" class="nav-link">
-                            <i class="nav-icon fa fa-heartbeat"></i>
-                            <p>
-                                回放记录
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/config/list.htm" target="_self" class="nav-link">
-                            <i class="nav-icon fa fa-cogs"></i>
-                            <p>
-                                配置管理
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" target="_self" class="nav-link active">
-                            <i class="nav-icon fa fa-heartbeat"></i>
-                            <p>
-                                在线模块
-                            </p>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <!-- /.sidebar-menu -->
-        </div>
-        <!-- /.sidebar -->
-    </aside>
-
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
@@ -106,7 +41,7 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/" target="_self">首页</a></li>
+                            <li class="breadcrumb-item"><a href="/home.htm" target="_self">首页</a></li>
                             <li class="breadcrumb-item active">在线模块</li>
                         </ol>
                     </div>
@@ -123,44 +58,36 @@
                             <h5 class="card-title text-blue">
                                 在线模块 <i class="fa fa-heartbeat"></i>
                             </h5>
-                            <div class="card-tools">
-                                <button type="button" class="btn btn-primary btn-sm float-right"
-                                        data-loading-text="searching" id="btn-install">
-                                    安装模块
-                                </button>
-                            </div>
                         </div>
                         <div class="card-body">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <form class="form-inline" method="get" action="list.htm">
-                                        <div class="form-group" style="margin-left:10px">
-                                            <label for="appName">应用名:</label>
-                                            <input type="text" class="form-control" placeholder="appName" name="appName"
-                                                   value="$!requestParams.appName" autocomplete="off"
-                                                   data-toggle="tooltip"
-                                                   title="appName" style="width: 210px;margin-left:10px">
-                                        </div>
-                                        <div class="form-group" style="margin-left: 10px">
-                                            <label for="ip">机器IP:</label>
-                                            <input type="text" class="form-control" placeholder="ip" name="ip"
-                                                   value="$!requestParams.ip" autocomplete="off"
-                                                   data-toggle="tooltip"
-                                                   title="ip" style="width: 210px;margin-left:10px">
-                                        </div>
-                                        <div class="form-group" style="margin-left: 20px">
-                                            <button type="submit" class="btn btn-primary"
-                                                    data-loading-text="searching" id="search-online-btn">
-                                                查询 <i class="fa fa-search icon-on-right bigger"></i>
-                                            </button>
-                                        </div>
-                                    </form>
+                            <form class="form-inline" method="get" action="list.htm">
+                                <div class="row col-lg-12">
+                                    <div class="form-group col-lg-4" style="padding-left:10px;padding-bottom: 15px;">
+                                        <label class="form-label" for="appName">应用名:</label>
+                                        <input type="text" class="form-control" placeholder="appName" name="appName"
+                                               value="$!requestParams.appName" autocomplete="off"
+                                               data-toggle="tooltip"
+                                               title="appName">
+                                    </div>
+                                    <div class="form-group col-lg-4" style="padding-left: 10px;padding-bottom: 15px;">
+                                        <label class="form-label" for="ip">机器IP:</label>
+                                        <input type="text" class="form-control" placeholder="ip" name="ip"
+                                               value="$!requestParams.ip" autocomplete="off"
+                                               data-toggle="tooltip"
+                                               title="ip">
+                                    </div>
+                                    <div class="form-group col-lg-4" style="padding-left: 20px;padding-bottom: 15px;">
+                                        <button type="submit" class="btn btn-primary"
+                                                data-loading-text="searching" id="search-online-btn">
+                                            查询 <i class="fa fa-search icon-on-right bigger"></i>
+                                        </button>
+                                    </div>
                                 </div>
-                            </div>
+                            </form>
                             <table class="table table-hover table-striped" style="word-break: break-all;">
                                 #if($pagerWrapper.content && $pagerWrapper.content.size() > 0)
                                     <thead>
-                                    <tr>
+                                    <tr style="text-align: center;">
                                         <th>应用名</th>
                                         <th>环境</th>
                                         <th>机器IP</th>
@@ -173,7 +100,7 @@
                                     </thead>
                                     <tbody>
                                         #foreach($data in $pagerWrapper.content)
-                                        <tr>
+                                        <tr style="text-align: center;">
                                             <td style="vertical-align: middle">$!data.appName</td>
                                             <td style="vertical-align: middle">$!{data.environment}</td>
                                             <td style="vertical-align: middle">$!data.ip</td>
@@ -192,18 +119,21 @@
                                                     <button class="btn btn-warning btn-xs btn-frozen"
                                                             data-toggle="tooltip"
                                                             title="冻结" data-ip="$!{data.ip}"
-                                                            data-app="$!{data.appName}">冻结
+                                                            data-app="$!{data.appName}"
+                                                            data-environment="$!{data.environment}">冻结
                                                     </button>
                                                 #else
                                                     <button class="btn btn-success btn-xs btn-active"
                                                             data-toggle="tooltip"
                                                             title="激活模块" data-ip="$!{data.ip}"
-                                                            data-app="$!{data.appName}">激活
+                                                            data-app="$!{data.appName}"
+                                                            data-environment="$!{data.environment}">激活
                                                     </button>
                                                 #end
                                                 <button class="btn btn-primary btn-xs btn-reload" data-toggle="tooltip"
                                                         title="刷新插件" data-ip="$!{data.ip}"
-                                                        data-app="$!{data.appName}">刷新
+                                                        data-app="$!{data.appName}"
+                                                        data-environment="$!{data.environment}">刷新
                                                 </button>
                                                 <a target="_blank"
                                                    href="detail.htm?id=$!{data.id}"
@@ -228,20 +158,6 @@
         <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
-
-    <footer class="main-footer">
-        <div class="float-right d-none d-sm-block">
-            <b>Version</b> 1.0.0
-        </div>
-        <strong>Copyright &copy; 2023-2024 <a href="#">华夏人寿保险股份有限公司</a>.</strong> All rights
-        reserved.
-    </footer>
-
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-        <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
 </div>
 <!-- ./wrapper -->
 
@@ -261,7 +177,12 @@
         $(".btn-active").on('click', function () {
             var appName = $(this).attr('data-app');
             var ip = $(this).attr('data-ip');
-            innerPost("/module/active.json", {'appName': appName, 'ip': ip}, function (response) {
+            var environment = $(this).attr('data-environment');
+            innerPost("/module/active.json", {
+                'appName': appName,
+                'ip': ip,
+                'environment': environment
+            }, function (response) {
                 if (response.success) {
                     notice(response.message, response.success)
                     setTimeout('window.location.reload()', 1000)
@@ -273,7 +194,12 @@
         $(".btn-frozen").on('click', function () {
             var appName = $(this).attr('data-app');
             var ip = $(this).attr('data-ip');
-            innerPost("/module/frozen.json", {'appName': appName, 'ip': ip}, function (response) {
+            var environment = $(this).attr('data-environment');
+            innerPost("/module/frozen.json", {
+                'appName': appName,
+                'ip': ip,
+                'environment': environment
+            }, function (response) {
                 if (response.success) {
                     notice(response.message, response.success)
                     setTimeout('window.location.reload()', 1000)
@@ -285,7 +211,12 @@
         $(".btn-reload").on('click', function () {
             var appName = $(this).attr('data-app');
             var ip = $(this).attr('data-ip');
-            innerPost("/module/reload.json", {'appName': appName, 'ip': ip}, function (response) {
+            var environment = $(this).attr('data-environment');
+            innerPost("/module/reload.json", {
+                'appName': appName,
+                'ip': ip,
+                'environment': environment
+            }, function (response) {
                 if (response.success) {
                     notice(response.message, response.success)
                     setTimeout('window.location.reload()', 1000)
