--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/replay/list.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/replay/list.vm
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/favorite.ico" type="image/x-icon"/>
     <link rel=”icon” href="/favorite.ico" type="image/x-icon"/>
     <link rel="bookmark" href="/favorite.ico" type="image/x-icon"/>
-    <title>在线模块 - Repeater</title>
+    <title>在线模块 </title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -17,84 +17,19 @@
     <link rel="stylesheet" href="/dist/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="/dist/css/fonts/googlefonts.css" rel="stylesheet">
+    <style>
+        .form-inline .form-control {
+            width: calc(100% - 8em);
+        }
+
+        .form-inline .form-label {
+            width: 8em;
+        }
+    </style>
 </head>
 <body class="hold-transition sidebar-mini ">
 <!-- Site wrapper -->
 <div class="wrapper">
-    <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-dark">
-        <!-- Left navbar links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-            </li>
-        </ul>
-
-        <!-- Right navbar links -->
-        <ul class="navbar-nav ml-auto">
-        </ul>
-    </nav>
-    <!-- /.navbar -->
-
-    <!-- Main Sidebar Container -->
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <!-- Brand Logo -->
-        <a href="#" class="brand-link">
-            <img src="/dist/img/RepeaterLogo.ico"
-                 alt="AdminLTE Logo"
-                 class="brand-image img-circle elevation-3"
-                 style="opacity: .8">
-            <span class="brand-text font-weight-light">华夏星斗流量录制回放平台</span>
-        </a>
-
-        <!-- Sidebar -->
-        <div class="sidebar">
-            <!-- Sidebar Menu -->
-            <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
-                    data-accordion="false">
-                    <!-- Add icons to the links using the .nav-icon class
-                         with font-awesome or any other icon font library -->
-                    <li class="nav-item">
-                        <a href="/online/search.htm" target="_self" class="nav-link">
-                            <i class="nav-icon fa fa-database"></i>
-                            <p>
-                                在线流量
-                                <span class="right badge badge-success">New</span>
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" target="_self" class="nav-link active">
-                            <i class="nav-icon fa fa-heartbeat"></i>
-                            <p>
-                                回放记录
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/config/list.htm" target="_self" class="nav-link">
-                            <i class="nav-icon fa fa-cogs"></i>
-                            <p>
-                                配置管理
-                            </p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/module/list.htm" target="_self" class="nav-link">
-                            <i class="nav-icon fa fa-heartbeat"></i>
-                            <p>
-                                在线模块
-                            </p>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <!-- /.sidebar-menu -->
-        </div>
-        <!-- /.sidebar -->
-    </aside>
-
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
@@ -106,7 +41,7 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/" target="_self">首页</a></li>
+                            <li class="breadcrumb-item"><a href="/home.htm" target="_self">首页</a></li>
                             <li class="breadcrumb-item active">回放记录</li>
                         </ol>
                     </div>
@@ -125,61 +60,78 @@
                             </h5>
                         </div>
                         <div class="card-body">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <form class="form-inline" method="get" action="list.htm">
-                                        <div class="form-group" style="margin-left:10px">
-                                            <label for="AppName">应用名:</label>
-                                            <input type="text" class="form-control" placeholder="appName" name="appName"
-                                                   value="$!requestParams.appName" autocomplete="off"
-                                                   data-toggle="tooltip"
-                                                   title="AppName" style="width: 210px;margin-left:10px">
-                                        </div>
-                                        <div class="form-group" style="margin-left: 10px">
-                                            <label for="Ip">ip:</label>
-                                            <input type="text" class="form-control" placeholder="ip" name="ip"
-                                                   value="$!requestParams.ip" autocomplete="off"
-                                                   data-toggle="tooltip"
-                                                   title="Ip" style="width: 210px;margin-left:10px">
-                                        </div>
-                                        <div class="form-group" style="margin-left: 10px">
-                                            <label for="TraceId">TraceId:</label>
-                                            <input type="text" class="form-control" placeholder="traceId" name="traceId"
-                                                   value="$!requestParams.traceId" autocomplete="off"
-                                                   data-toggle="tooltip"
-                                                   title="TraceId" style="width: 210px;margin-left:10px">
-                                        </div>
-                                        <div class="form-group" style="margin-left: 10px">
-                                            <label for="RepeatId">RepeatId:</label>
-                                            <input type="text" class="form-control" placeholder="repeatId"
-                                                   name="repeatId"
-                                                   value="$!requestParams.repeatId" autocomplete="off"
-                                                   data-toggle="tooltip"
-                                                   title="RepeatId" style="width: 210px;margin-left:10px">
-                                        </div>
-                                        <div class="form-group" style="margin-left: 10px">
-                                            <label for="Environment">环境:</label>
-                                            <input type="text" class="form-control" placeholder="environment"
-                                                   name="environment"
-                                                   value="$!requestParams.environment" autocomplete="off"
-                                                   data-toggle="tooltip"
-                                                   title="Environment" style="width: 210px;margin-left:10px">
-                                        </div>
-                                        <div class="form-group" style="margin-left: 20px">
-                                            <button type="submit" class="btn btn-primary"
-                                                    data-loading-text="searching" id="search-online-btn">
-                                                查询 <i class="fa fa-search icon-on-right bigger"></i>
-                                            </button>
-                                        </div>
-                                    </form>
+                            <form class="form-inline" method="get" action="list.htm">
+                                <div class="row col-lg-12">
+                                    <div class="form-group col-lg-4" style="padding-left:10px;padding-bottom:10px;">
+                                        <label class="form-label" for="AppName">应用名:</label>
+                                        <input type="text" class="form-control" placeholder="appName" name="appName"
+                                               value="$!requestParams.appName" autocomplete="off"
+                                               data-toggle="tooltip"
+                                               title="AppName">
+                                    </div>
+                                    <div class="form-group col-lg-4" style="padding-left: 10px;padding-bottom:10px;">
+                                        <label class="form-label" for="TraceId">原TraceId:</label>
+                                        <input type="text" class="form-control" placeholder="rTraceId"
+                                               name="rTraceId"
+                                               value="$!requestParams.rTraceId" autocomplete="off"
+                                               data-toggle="tooltip"
+                                               title="TraceId">
+                                    </div>
+                                    <div class="form-group col-lg-4" style="padding-left: 10px;padding-bottom:10px;">
+                                        <label class="form-label" for="RepeatId">RepeatId:</label>
+                                        <input type="text" class="form-control" placeholder="repeatId"
+                                               name="repeatId"
+                                               value="$!requestParams.repeatId" autocomplete="off"
+                                               data-toggle="tooltip"
+                                               title="RepeatId">
+                                    </div>
                                 </div>
-                            </div>
+                                <div class="row col-lg-12">
+                                    <div class="form-group col-lg-4"
+                                         style="padding-left: 10px;padding-bottom:10px;">
+                                        <label class="form-label" for="url">回放结果:</label>
+                                        <select class="form-control" placeholder="回放结果"
+                                                name="replayStatus"
+                                                value="$!requestParams.replayStatus" autocomplete="off"
+                                                data-toggle="tooltip"
+                                                style="width: 210px;margin-left:10px">
+                                            #if($requestParams.replayStatus==2)
+                                                <option value="">全部</option>
+                                                <option selected value="2">回放中</option>
+                                                <option value="1">一致</option>
+                                                <option value="0">不一致</option>
+                                            #elseif($requestParams.replayStatus==1)
+                                                <option value="">全部</option>
+                                                <option value="2">回放中</option>
+                                                <option selected value="1">一致</option>
+                                                <option value="0">不一致</option>
+                                            #elseif($requestParams.replayStatus==0)
+                                                <option value="">全部</option>
+                                                <option value="2">回放中</option>
+                                                <option value="1">一致</option>
+                                                <option selected value="0">不一致</option>
+                                            #else
+                                                <option selected value="">全部</option>
+                                                <option value="2">回放中</option>
+                                                <option value="1">一致</option>
+                                                <option value="0">不一致</option>
+                                            #end
+                                        </select>
+                                    </div>
+                                    <div class="form-group col-lg-4" style="padding-left: 20px;padding-bottom:10px;">
+                                        <button type="submit" class="btn btn-primary"
+                                                data-loading-text="searching" id="search-online-btn">
+                                            查询 <i class="fa fa-search icon-on-right bigger"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
                             <table class="table table-hover table-striped" style="word-break: break-all;">
                                 #if($pagerWrapper.content && $pagerWrapper.content.size() > 0)
                                     <thead>
-                                    <tr>
+                                    <tr style="text-align: center;">
                                         <th>应用名</th>
-                                        <th>环境</th>
+                                        <th>原TraceId</th>
                                         <th>TraceId</th>
                                         <th>RepeateId</th>
                                         <th>回放对比结果</th>
@@ -190,22 +142,24 @@
                                     </thead>
                                     <tbody>
                                         #foreach($data in $pagerWrapper.content)
-                                        <tr>
+                                        <tr style="text-align: center;">
                                             <td style="vertical-align: middle">$!data.appName</td>
-                                            <td style="vertical-align: middle">$!{data.environment}</td>
+                                            <td style="vertical-align: middle">$!{data.rTraceId}</td>
                                             <td style="vertical-align: middle">$!data.traceId</td>
                                             <td style="vertical-align: middle">$!{data.repeatId}</td>
                                             <td style="vertical-align: middle">
-                                                #if($!{data.success}==true)
+                                                #if($!{data.status}==0)
+                                                    <span class="badge badge-warning">回放中</span>
+                                                #elseif($!{data.success}==true)
                                                     <span class="badge badge-success">一致</span>
-                                                #else
+                                                #elseif($!{data.success}==false)
                                                     <span class="badge badge-warning">不一致</span>
                                                 #end
                                             </td>
                                             <td style="vertical-align: middle">$!{data.gmtCreate}</td>
                                             <td style="vertical-align: middle">$!{data.cost}</td>
                                             <td style="vertical-align: middle">
-                                                <a target="_blank"
+                                                <a target="_self"
                                                    href="detail.htm?repeatId=$!{data.repeatId}"
                                                    class="btn btn-primary btn-xs" data-toggle="tooltip"
                                                    title="查看详情">详情</a>
@@ -214,7 +168,7 @@
                                         #end
                                     </tbody>
                                 #else
-                                    <h5 style="padding-left: 10px;margin-top: 20px"> 没有心跳信息</h5>
+                                    <h5 style="padding-left: 10px;margin-top: 20px"> 没有符合条件的回放信息</h5>
                                 #end
                             </table>
                         </div>
@@ -228,20 +182,6 @@
         <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
-
-    <footer class="main-footer">
-        <div class="float-right d-none d-sm-block">
-            <b>Version</b> 1.0.0
-        </div>
-        <strong>Copyright &copy; 2023-2024 <a href="#">华夏人寿保险股份有限公司</a>.</strong> All rights
-        reserved.
-    </footer>
-
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-        <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
 </div>
 <!-- ./wrapper -->
 
