--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/online/list.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/online/list.vm
@@ -68,7 +68,7 @@
                                         <input type="text" class="form-control" placeholder="appName" name="appName"
                                                value="$!requestParams.appName" autocomplete="off"
                                                data-toggle="tooltip"
-                                               title="appName">
+                                               title="应用名">
                                     </div>
                                     <div class="form-group col-lg-5"
                                          style="padding-left: 10px;padding-bottom:10px;">
@@ -85,7 +85,7 @@
                                                 name="replayStatus"
                                                 value="$!requestParams.replayStatus" autocomplete="off"
                                                 data-toggle="tooltip"
-                                                title="url">
+                                                title="回放结果">
                                             #if($requestParams.replayStatus==0)
                                                 <option value="">全部</option>
                                                 <option selected value="0">未回放</option>
@@ -118,7 +118,7 @@
                                                name="clientHost"
                                                value="$!requestParams.clientHost" autocomplete="off"
                                                data-toggle="tooltip"
-                                               title="clientHost">
+                                               title="客户端IP">
                                     </div>
                                     <div class="form-group col-lg-7" style="padding-left: 10px;padding-bottom:10px;">
                                         <label class="form-label" for="url">接口地址:</label>
@@ -126,7 +126,7 @@
                                                name="url"
                                                value="$!requestParams.url" autocomplete="off"
                                                data-toggle="tooltip"
-                                               title="url">
+                                               title="接口地址">
                                     </div>
                                 </div>
                                 <div class="row col-lg-12">
@@ -138,7 +138,7 @@
                                                id="gmt-start"
                                                value="$!requestParams.startDate" autocomplete="off"
                                                data-toggle="tooltip"
-                                               title="url">
+                                               title="录制开始时间">
                                     </div>
                                     <div class="form-group col-lg-5"
                                          style="padding-left: 10px;padding-bottom:10px;">
@@ -148,7 +148,7 @@
                                                id="gmt-end"
                                                value="$!requestParams.endDate" autocomplete="off"
                                                data-toggle="tooltip"
-                                               title="url">
+                                               title="录制结束时间">
                                     </div>
                                     <div class="form-group col-lg-2"
                                          style="padding-left: 20px;padding-bottom:10px;">
