--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/replay/list.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/replay/list.vm
@@ -89,6 +89,37 @@
                                 <div class="row col-lg-12">
                                     <div class="form-group col-lg-4"
                                          style="padding-left: 10px;padding-bottom:10px;">
+                                        <label class="form-label" for="url">回放模式:</label>
+                                        <select class="form-control" placeholder="回放结果"
+                                                name="replayType"
+                                                value="$!requestParams.replayType" autocomplete="off"
+                                                data-toggle="tooltip"
+                                                style="width: 210px;margin-left:10px">
+                                            #if($requestParams.replayType=='0')
+                                                <option value="">全部</option>
+                                                <option selected value="0">event事件回放</option>
+                                                <option value="1">quartz定时任务回放</option>
+                                                <option value="2">手动回放</option>
+                                            #elseif($requestParams.replayType=='1')
+                                                <option value="">全部</option>
+                                                <option value="0">event事件回放</option>
+                                                <option selected value="1">quartz定时任务回放</option>
+                                                <option value="2">手动回放</option>
+                                            #elseif($requestParams.replayType=='2')
+                                                <option value="">全部</option>
+                                                <option value="0">event事件回放</option>
+                                                <option value="1">quartz定时任务回放</option>
+                                                <option selected value="2">手动回放</option>
+                                            #else
+                                                <option selected value="">全部</option>
+                                                <option value="0">event事件回放</option>
+                                                <option value="1">quartz定时任务回放</option>
+                                                <option value="2">手动回放</option>
+                                            #end
+                                        </select>
+                                    </div>
+                                    <div class="form-group col-lg-4"
+                                         style="padding-left: 10px;padding-bottom:10px;">
                                         <label class="form-label" for="url">回放结果:</label>
                                         <select class="form-control" placeholder="回放结果"
                                                 name="replayStatus"
