--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/creen/creen.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/creen/creen.vm
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="/favorite.ico" type="image/x-icon"/>
+    <link rel=”icon” href="/favorite.ico" type="image/x-icon"/>
+    <link rel="bookmark" href="/favorite.ico" type="image/x-icon"/>
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
+<body style="margin:0px;">
 <!-- 头部模块 -->
 <header>
     <h1><span>华夏星斗可视化</span></h1>
